meu-site-stack/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meu-site-stack
  labels:
    name: meu-site-stack
