meu-site-stack/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: meu-site-stack
  name: meu-site-stack-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - henriqzimer.com.br
      secretName: wildcard-henriqzimer-tls
  rules:
    - host: henriqzimer.com.br
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: meu-site-backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meu-site-frontend
                port:
                  number: 80
